# aos_core_iam_cpp

./: .gitmodules  CMakeLists.txt  README.md  conanfile.py  libp11conan.py  sonar-project.properties
.github/workflows/: build_test.yaml
CMakeModules/: AosCoreLib.cmake
cmake/: AosCoreAPI.cmake  AosCoreCommon.cmake
src/: CMakeLists.txt  main.cpp  version.hpp.in
src/app/: CMakeLists.txt  app.cpp  app.hpp
src/config/: CMakeLists.txt  config.cpp  config.hpp
src/database/: CMakeLists.txt  database.cpp  database.hpp
src/database/migration/: 1_update.down.sql  1_update.up.sql
src/fileidentifier/: CMakeLists.txt  fileidentifier.cpp  fileidentifier.hpp
src/iam/: CMakeLists.txt  iamserver.cpp  iamserver.hpp  permissionhandler.hpp  remoteiamhandler.hpp
src/iam/client/: CMakeLists.txt  certhelper.cpp  certhelper.hpp  iamclient.cpp  iamclient.hpp  main.cpp
src/iamclient/: CMakeLists.txt  iamclient.cpp  iamclient.hpp
src/iamserver/: CMakeLists.txt  iamserver.cpp  iamserver.hpp  nodecontroller.cpp  nodecontroller.hpp  protectedmessagehandler.cpp  protectedmessagehandler.hpp  publicmessagehandler.cpp  publicmessagehandler.hpp  streamwriter.hpp
src/logger/: logger.hpp  logmodule.hpp
src/nodeinfoprovider/: CMakeLists.txt  nodeinfoprovider.cpp  nodeinfoprovider.hpp  systeminfo.cpp  systeminfo.hpp
src/utils/: CMakeLists.txt  convert.cpp  convert.hpp  json.cpp  json.hpp  scopeexit.hpp
src/visidentifier/: CMakeLists.txt  log.hpp  pocowsclient.cpp  pocowsclient.hpp  visidentifier.cpp  visidentifier.hpp  vismessage.cpp  vismessage.hpp  visprotocol.cpp  visprotocol.hpp  wsclient.cpp  wsclient.hpp  wsclientevent.cpp  wsclientevent.hpp  wsexception.hpp  wspendingrequests.cpp  wspendingrequests.hpp
tests/: CMakeLists.txt
tests/config/: config_test.cpp
tests/database/: database_test.cpp
tests/fileidentifier/: CMakeLists.txt  fileidentifier_test.cpp
tests/iam_client/: iamclient_test.cpp
tests/iamclient/: CMakeLists.txt  iamclient_test.cpp
tests/iamserver/: CMakeLists.txt  iamserver_test.cpp  nodecontroller_test.cpp  protectedmessagehandler_test.cpp  publicmessagehandler_test.cpp
tests/iamserver/cmake/: gencertificates.cmake  softhsm.cmake
tests/iamserver/stubs/: storagestub.cpp
tests/include/mocks/: certhandlermock.hpp  certloadermock.hpp  certprovidermock.hpp  provisionmanagermock.hpp  wsclientmock.hpp  x509providermock.hpp
tests/nodeinfoprovider/: CMakeLists.txt  nodeinfoprovider_test.cpp
tests/utils/: json_test.cpp  scopeexit_test.cpp
tests/visidentifier/: CMakeLists.txt  pocowsclient_test.cpp  pocowsclient_tests.cpp  testvisserver.cpp  testvisserver.hpp  visidentifier_test.cpp  visidentifier_tests.cpp  vismessage_test.cpp  visserver.cpp  visserver.hpp
