#
# Copyright (C) 2025 EPAM Systems, Inc.
#
# SPDX-License-Identifier: Apache-2.0
#

set(TARGET fileidentifier_test)

# ######################################################################################################################
# Sources
# ######################################################################################################################

set(SOURCES fileidentifier_test.cpp)

# ######################################################################################################################
# Target
# ######################################################################################################################

add_executable(${TARGET} ${SOURCES})

gtest_discover_tests(${TARGET})

# ######################################################################################################################
# Libraries
# ######################################################################################################################

target_link_libraries(${TARGET} fileidentifier aoslogger aostestcore GTest::gmock_main)
